--- a/Strona/egzaminy/package.json
+++ b/Strona/egzaminy/package.json
@@ -1,6 +1,7 @@
 {
   "name": "egzaminy",
   "version": "0.1.0",
+  "homepage": "https://PumaYT22.github.io/EgzaminyZawodoweINF",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
