--- a/Strona/egzaminy/package.json
+++ b/Strona/egzaminy/package.json
@@ -1,7 +1,7 @@
 {
   "name": "egzaminy",
   "version": "0.1.0",
-  "homepage": "https://PumaYT22.github.io/EgzaminyZawodoweINF",
+  "homepage": "https://PumaYT22.github.io/EgzaminyZawodoweINF/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
