--- a/Strona/egzaminy/package.json
+++ b/Strona/egzaminy/package.json
@@ -10,11 +10,14 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "highlight.js": "^11.9.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "rehype-highlight": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
